--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -45,11 +45,12 @@ jobs:
           wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
           echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google-chrome.list
           sudo apt-get update
-          sudo apt-get install -y google-chrome-stable chromium-chromedriver
+          sudo apt-get install -y google-chrome-stable chromedriver
           
           # Overenie inštalácie
           google-chrome --version
-          chromium-chromedriver --version
+          chromedriver --version
+
 
       - name: 🤖 Spustenie automatizácie
         run: |
