--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -45,11 +45,25 @@ jobs:
           wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
           echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google-chrome.list
           sudo apt-get update
-          sudo apt-get install -y google-chrome-stable chromedriver
-          
+          sudo apt-get install -y google-chrome-stable unzip
+
+          # Zisti verziu Chrome
+          CHROME_VERSION=$(google-chrome --version | grep -Po '[0-9]+\.[0-9]+\.[0-9]+')
+          echo "Detected Chrome version: $CHROME_VERSION"
+
+          # Stiahni rovnakú verziu chromedriver
+          DRIVER_VERSION=$(curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION)
+          echo "Chromedriver version: $DRIVER_VERSION"
+
+          wget -q "https://chromedriver.storage.googleapis.com/${DRIVER_VERSION}/chromedriver_linux64.zip"
+          unzip chromedriver_linux64.zip
+          sudo mv chromedriver /usr/local/bin/chromedriver
+          sudo chmod +x /usr/local/bin/chromedriver
+
           # Overenie inštalácie
           google-chrome --version
           chromedriver --version
+
 
 
       - name: 🤖 Spustenie automatizácie
