--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -41,20 +41,18 @@ jobs:
       - name: 🌐 Inštalácia Chrome a ChromeDriver
         run: |
           sudo apt-get update
-          # Inštalácia Google Chrome
-          wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-          echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google-chrome.list
-          sudo apt-get update
-          sudo apt-get install -y google-chrome-stable unzip
+          sudo apt-get install -y google-chrome-stable unzip curl
 
-          # Zisti verziu Chrome
-          CHROME_VERSION=$(google-chrome --version | grep -Po '[0-9]+\.[0-9]+\.[0-9]+')
-          echo "Detected Chrome version: $CHROME_VERSION"
+          # Zisti verziu Chrome (major)
+          CHROME_FULL_VERSION=$(google-chrome --version | grep -Po '[0-9]+\.[0-9]+\.[0-9]+')
+          CHROME_MAJOR_VERSION=${CHROME_FULL_VERSION%%.*}
+          echo "Detected Chrome major version: $CHROME_MAJOR_VERSION"
 
-          # Stiahni rovnakú verziu chromedriver
-          DRIVER_VERSION=$(curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION)
+          # Získaj matching chromedriver podľa major verzie
+          DRIVER_VERSION=$(curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_MAJOR_VERSION)
           echo "Chromedriver version: $DRIVER_VERSION"
 
+          # Stiahnutie a inštalácia chromedriver
           wget -q "https://chromedriver.storage.googleapis.com/${DRIVER_VERSION}/chromedriver_linux64.zip"
           unzip chromedriver_linux64.zip
           sudo mv chromedriver /usr/local/bin/chromedriver
@@ -63,8 +61,6 @@ jobs:
           # Overenie inštalácie
           google-chrome --version
           chromedriver --version
-
-
 
       - name: 🤖 Spustenie automatizácie
         run: |
