--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -43,24 +43,22 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y google-chrome-stable unzip curl
 
-          # Zisti verziu Chrome (major)
-          CHROME_FULL_VERSION=$(google-chrome --version | grep -Po '[0-9]+\.[0-9]+\.[0-9]+')
-          CHROME_MAJOR_VERSION=${CHROME_FULL_VERSION%%.*}
-          echo "Detected Chrome major version: $CHROME_MAJOR_VERSION"
+          # Overenie Chrome
+          google-chrome --version
 
-          # Získaj matching chromedriver podľa major verzie
-          DRIVER_VERSION=$(curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_MAJOR_VERSION)
-          echo "Chromedriver version: $DRIVER_VERSION"
+          # Získaj najnovší Chromedriver
+          DRIVER_VERSION=$(curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE)
+          echo "Using Chromedriver version: $DRIVER_VERSION"
 
-          # Stiahnutie a inštalácia chromedriver
+          # Stiahnutie a inštalácia Chromedriver
           wget -q "https://chromedriver.storage.googleapis.com/${DRIVER_VERSION}/chromedriver_linux64.zip"
           unzip chromedriver_linux64.zip
           sudo mv chromedriver /usr/local/bin/chromedriver
           sudo chmod +x /usr/local/bin/chromedriver
 
-          # Overenie inštalácie
-          google-chrome --version
+          # Overenie Chromedriver
           chromedriver --version
+
 
       - name: 🤖 Spustenie automatizácie
         run: |
