--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -43,6 +43,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y google-chrome-stable unzip curl
           sudo rm -f /usr/local/bin/chromedriver
+          sudo rm -f /usr/bin/chromedriver
           DRIVER_VERSION=$(curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE)
           echo "Using Chromedriver version: $DRIVER_VERSION"
           wget -q "https://chromedriver.storage.googleapis.com/${DRIVER_VERSION}/chromedriver_linux64.zip"
