--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -50,7 +50,10 @@ jobs:
           unzip chromedriver_linux64.zip
           sudo mv chromedriver /usr/local/bin/chromedriver
           sudo chmod +x /usr/local/bin/chromedriver
+          echo "/usr/local/bin" | sudo tee /etc/paths.d/chromedriver
+          export PATH="/usr/local/bin:$PATH"
           google-chrome --version
+          which chromedriver
           chromedriver --version
 
       - name: 🤖 Spustenie automatizácie
