--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -2,12 +2,22 @@ name: automatizácia
 
 on:
   schedule:
-    # Letný čas (CEST = UTC+2): apríl – október, pondelok–piatok o 16:20 CEST = 14:20 UTC
-    - cron: '20 14 * 4-10 1-5'
-    # Zimný čas (CET = UTC+1): november – december, pondelok–piatok o 16:20 CET = 15:20 UTC
-    - cron: '20 15 * 11,12 1-5'
-    # Zimný čas (CET = UTC+1): január – marec, pondelok–piatok o 16:20 CET = 15:20 UTC
-    - cron: '20 15 * 1-3 1-5'
+    # Zimný čas: január - február
+    - cron: '20 15 * 1-2 1-5'
+    
+    # Marec: zmiešané (do 30.3 zimný, potom letný)
+    - cron: '20 15 1-29 3 1-5'    # do 29. marca zimný čas
+    - cron: '20 14 30-31 3 1-5'   # od 30. marca letný čas
+    
+    # Letný čas: apríl - september  
+    - cron: '20 14 * 4-9 1-5'
+    
+    # Október: zmiešané (do 26.10 letný, potom zimný)
+    - cron: '20 14 1-26 10 1-5'   # do 26. októbra letný čas
+    - cron: '20 15 27-31 10 1-5'  # od 27. októbra zimný čas
+    
+    # Zimný čas: november - december
+    - cron: '20 15 * 11-12 1-5'
   workflow_dispatch:
 
 jobs:
